# tei-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-basic-lookups-and-search/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-attribute-resolution-and-class-hierarchy/: 03-01-SUMMARY.md
.planning/phases/04-content-models-and-nesting-validation/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-deprecation-awareness/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-enhanced-querying/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-core-validation/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md
.planning/phases/08-odd-customisation/: 08-01-SUMMARY.md  08-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/tei_mcp/: __main__.py  customisation.py  download.py  models.py  parser.py  server.py  store.py  validator.py
tests/: conftest.py  test_customisation.py  test_download.py  test_models.py  test_parser.py  test_server.py  test_store_query.py  test_tools.py  test_validator.py
tests/fixtures/: test_custom.odd  test_odd.xml
